--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-MYSQL_ROOT_PASSWORD=
-MYSQL_DATABASE=
-MYSQL_USER=
-MYSQL_PASSWORD=
+POSTGRES_DB=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_HOST=
 TZ=Asia/Tokyo
